--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -99,7 +99,7 @@
                                     <ul>
                                         <li>Instructed Spoken English full-time at the 湖南省长沙市南雅中学.</li>
                                         <li>Instructed Mathematics full-time at the Match Charter High School, Boston MA.</li>
-                                        <li>Lived with and mentored young men full time at the Blue Lake Fine Arts Camp.</li>
+                                        <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -107,14 +107,14 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">App Academy</div>
-                                    <div class="experience__date">Programming Instructor: Feb. - Aug. 2019 (Full Time)</div>
+                                    <div class="experience__title">Programming Instructor</div>
+                                    <div class="experience__date">Feb. - Aug. 2019 (Full Time)</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Taught Full Stack Software Development and Data Structures, placing over 100 students.
+                                        <li>Taught Full Stack Software Development and Data Structures at App Academy, placing over 100 students.
                                         </li>
                                         <li>Published an article on music and coding, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
                                     </ul>
@@ -189,6 +189,12 @@
                             <a class="socials__link setting--primary-text"
                                 href="https://soundcloud.com/adrianjewell/sets">Listen
                                 on Soundcloud.</a>
+                        </div>
+                        <div class="socials">
+                            <div class="socials__label">Music Videos</div>
+                            <a class="socials__link setting--primary-text"
+                                href="https://youtube.com/@adrianjewell?si=GXwOs7ddSHnaKdqz">Watch
+                                on Youtube.</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Contact</div>
