--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -91,7 +91,7 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Educator</div>
-                                    <div class="experience__date">2014 - 2017</div>
+                                    <div class="experience__date">2014 - 2019</div>
                                 </div>
                             </div>
                             <div class="experience__description">
@@ -100,6 +100,8 @@
                                         <li>Instructed Spoken English full-time at the 湖南省长沙市南雅中学.</li>
                                         <li>Instructed Mathematics full-time at the Match Charter High School, Boston MA.</li>
                                         <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp.</li>
+                                        <li>Taught Software Development and Data Structures full-time at App Academy, placing over 100 students.
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -107,16 +109,15 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Programming Instructor</div>
-                                    <div class="experience__date">Feb. - Aug. 2019 (Full Time)</div>
+                                    <div class="experience__title">Writer</div>
+                                    <div class="experience__date">2014 - Present</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Taught Full Stack Software Development and Data Structures at App Academy, placing over 100 students.
-                                        </li>
                                         <li>Published an article on music and coding, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
+                                        <li>Published technical and philosophical works.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -126,7 +127,7 @@
                                 <div class="experience__header">
                                     <div class="experience__header-line">
                                         <div class="experience__title">Engineer</div>
-                                        <div class="experience__date">2017 - Present</div>
+                                        <div class="experience__date">2019 - Present</div>
                                     </div>
                                 </div>
                                 <div class="experience__description">
