--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -82,8 +82,31 @@
                                 <div>
                                     <ul>
                                         <li>Performed solo and collaborative recitals in the United States and China.</li>
-                                        <li>Instructed piano students of all ages in Boston, New York City, Ohio, Michigan, and Changsha.</li>
+                                        <li>Instructed piano students of all ages in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
                                     </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience" style="page-break-inside: avoid;">
+                                <div class="experience__header">
+                                    <div class="experience__header-line">
+                                        <div class="experience__title">Engineer</div>
+                                        <div class="experience__date">2019 - Present</div>
+                                    </div>
+                                </div>
+                                <div class="experience__description">
+                                    <div>
+                                        <ul>
+                                            <li>Built and scaled enterprise e-commerce systems (current role).</li>
+                                            <li>
+                                                Built <a
+                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
+                                                which was accepted into the Oberlin College start up accelerator program. </li>
+                                            <li>
+                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -119,29 +142,6 @@
                                         <li>Published an article on music and coding, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
                                         <li>Published technical and philosophical works.</li>
                                     </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience" style="page-break-inside: avoid;">
-                                <div class="experience__header">
-                                    <div class="experience__header-line">
-                                        <div class="experience__title">Engineer</div>
-                                        <div class="experience__date">2019 - Present</div>
-                                    </div>
-                                </div>
-                                <div class="experience__description">
-                                    <div>
-                                        <ul>
-                                            <li>
-                                                Built <a
-                                                    href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
-                                                which was accepted into the Oberlin College start up accelerator program. </li>
-                                            <li>
-                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
-                                            <li>Built and scaled enterprise e-commerce systems.</li>
-                                        </ul>
-                                    </div>
                                 </div>
                             </div>
                         </div>                
