--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -123,8 +123,7 @@
                                         <li>Instructed Spoken English full-time at the 湖南省长沙市南雅中学.</li>
                                         <li>Instructed Mathematics full-time at the Match Charter High School, Boston MA.</li>
                                         <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp.</li>
-                                        <li>Taught Software Development and Data Structures full-time at App Academy, placing over 100 students.
-                                        </li>
+                                        <li>Taught software development and data structures full-time at App Academy, placing over 100 students.</li>
                                     </ul>
                                 </div>
                             </div>
