--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -102,7 +102,7 @@
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
-                                                which was accepted into the Oberlin College start up accelerator program. </li>
+                                                which was accepted into the Oberlin College start-up accelerator program. </li>
                                             <li>
                                                 Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
                                         </ul>
@@ -207,7 +207,7 @@
                                 href="https://www.linkedin.com/in/adrian-jewell/">Profile</a>
                         </div>
                         <div class="socials">
-                            <div class="socials__label">Blog</div>
+                            <div class="socials__label">Writing</div>
                             <a class="socials__link setting--primary-text"
                                 href="http://www.adrianjewell.com">www.adrianjewell.com</a>
                         </div>
