--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -81,7 +81,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Performed solo and collaborative recitals in the United States and China.</li>
+                                        <li>Performed many solo and collaborative recitals in the United States and China.</li>
                                         <li>Instructed piano students of all ages in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
                                     </ul>
                                 </div>
@@ -98,7 +98,7 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built and scaled enterprise e-commerce systems (current role).</li>
+                                            <li>Built and scaled enterprise e-commerce systems (current).</li>
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
@@ -114,16 +114,17 @@
                             <div class="experience__header">
                                 <div class="experience__header-line">
                                     <div class="experience__title">Educator</div>
-                                    <div class="experience__date">2014 - 2019</div>
+                                    <div class="experience__date">2012 - 2019</div>
                                 </div>
                             </div>
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Instructed Spoken English full-time at the 湖南省长沙市南雅中学.</li>
-                                        <li>Instructed Mathematics full-time at the Match Charter High School, Boston MA.</li>
-                                        <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp.</li>
-                                        <li>Taught software development and data structures full-time at App Academy, placing over 100 students.</li>
+                                        <li>Taught software development and data structures full-time at App Academy, San Francisco, CA (2019).</li>
+                                        <li>Instructed Mathematics full-time at the Match Charter High School, Boston, MA (2016-2017).</li>
+                                        <li>Instructed Spoken English full-time at the Changsha Nanya Middle School (湖南省长沙市南雅中学) (2014-2015).</li>
+                                        <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp, Michigan (summer 2012).</li>
+                                        <li>Taught reading, writing and math to fourth graders in Oberlin, Ohio (summer 2013).</li>
                                     </ul>
                                 </div>
                             </div>
@@ -138,7 +139,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Published an article on music and coding, getting 38K reads: https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/</li>
+                                        <li>Published an article about music and programming, getting 38 thousand reads.</li>
                                         <li>Published technical and philosophical works.</li>
                                     </ul>
                                 </div>
