--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -91,14 +91,14 @@
                             <div class="experience" style="page-break-inside: avoid;">
                                 <div class="experience__header">
                                     <div class="experience__header-line">
-                                        <div class="experience__title">Engineer</div>
+                                        <div class="experience__title">Software Engineer</div>
                                         <div class="experience__date">2019 - Present</div>
                                     </div>
                                 </div>
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built and scaled enterprise e-commerce systems (current).</li>
+                                            <li>Built and scaled enterprise e-commerce systems at Wayfair (current).</li>
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
