--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -98,13 +98,13 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built and scaled enterprise e-commerce systems at Wayfair (current).</li>
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
                                                 which was accepted into the Oberlin College start-up accelerator program. </li>
                                             <li>
                                                 Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
+                                            <li>Built and scaled enterprise e-commerce systems at Wayfair (2019 - present).</li>
                                         </ul>
                                     </div>
                                 </div>
