--- a/index.html
+++ b/index.html
@@ -62,22 +62,12 @@
     </section>
     <section>
       Writings:
-      <br />
-      <a href="https://adrianjewell91.github.io/decoupler-website/"
-        >How to decouple a monolith db</a
-      >
-      <br />
       <a
         href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/"
-        >How music and coding are so similar</a
+        >How music and coding are so similar.</a
       >
-      <br />
-      <a href="https://github.com/Adrianjewell91/how-to-code"
-        >How programmers think</a
-      >
-      <br />
       <a href="https://leetcode.com/problems/median-of-two-sorted-arrays/solutions/4590288/java-beats-100-time/"
-        >How to solve the median of 2 sorted arrays</a
+        >How to solve for the median of 2 sorted arrays.</a
       >
     </section>
   </body>
