--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -140,7 +140,7 @@
                                 <div>
                                     <ul>
                                         <li>Published an article about music and programming, getting 38 thousand reads.</li>
-                                        <li>Published technical and philosophical works.</li>
+                                        <li>Wrote technical and philosophical works.</li>
                                     </ul>
                                 </div>
                             </div>
