--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -72,22 +72,6 @@
                     </div>
                     <div class="section__content">
                         <div class="experience" style="page-break-inside: avoid;">
-                            <div class="experience__header">
-                                <div class="experience__header-line">
-                                    <div class="experience__title">Pianist</div>
-                                    <div class="experience__date">2009 - Present</div>
-                                </div>
-                            </div>
-                            <div class="experience__description">
-                                <div>
-                                    <ul>
-                                        <li>Performed many solo and collaborative recitals in the United States and China.</li>
-                                        <li>Instructed piano students of all ages in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience" style="page-break-inside: avoid;">
                                 <div class="experience__header">
                                     <div class="experience__header-line">
@@ -98,15 +82,32 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
+                                            <li>Built and scaled enterprise backend systems at Wayfair (2019 - present).</li>
+                                            <li>Built frontend systems at Williams Sonoma (2018).</li>
                                             <li>
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
                                                 which was accepted into the Oberlin College start-up accelerator program. </li>
                                             <li>
                                                 Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
-                                            <li>Built and scaled enterprise e-commerce systems at Wayfair (2019 - present).</li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+                        </div>                        
+                        <div class="experience" style="page-break-inside: avoid;">
+                            <div class="experience__header">
+                                <div class="experience__header-line">
+                                    <div class="experience__title">Pianist</div>
+                                    <div class="experience__date">2009 - Present</div>
+                                </div>
+                            </div>
+                            <div class="experience__description">
+                                <div>
+                                    <ul>
+                                        <li>Performed many solo and collaborative recitals in the United States and China.</li>
+                                        <li>Instructed piano students in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
