--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -122,8 +122,8 @@
                                 <div>
                                     <ul>
                                         <li>Taught software development and data structures full-time at App Academy, San Francisco, CA (2019).</li>
-                                        <li>Instructed Mathematics full-time at the Match Charter High School, Boston, MA (2016-2017).</li>
-                                        <li>Instructed Spoken English full-time at the Changsha Nanya Middle School (湖南省长沙市南雅中学) (2014-2015).</li>
+                                        <li>Taught mathematics full-time at the Match Charter High School, Boston, MA (2016-2017).</li>
+                                        <li>Taught spoken English full-time at the Changsha Nanya Middle School (湖南省长沙市南雅中学) (2014-2015).</li>
                                         <li>Lived with and mentored young men full-time at the Blue Lake Fine Arts Camp, Michigan (summer 2012).</li>
                                         <li>Taught reading, writing and math to fourth graders in Oberlin, Ohio (summer 2013).</li>
                                     </ul>
