--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -189,7 +189,7 @@
                          <div class="socials">
                             <div class="socials__label">Contact</div>
                             <a class="socials__link setting--primary-text"
-                                href="mailto: aj642e@proton.me">aj642e@proton.me</a>
+                                href="mailto: adrianjewell91@gmail.com">adrianjewell91@gmail.com</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Music Albums</div>
