--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
       Hi I'm Adrian, and thanks for visiting my personal website!
     </section>
     <section>
-      Feel free to check out my work and ask any questions.
       <br />
       <a href="https://adrianjewell.com/assets/resume/software-resume.html"
         >Resume</a
@@ -66,9 +65,31 @@
         href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/"
         >How music and coding are so similar.</a
       >
+      <br />
       <a href="https://leetcode.com/problems/median-of-two-sorted-arrays/solutions/4590288/java-beats-100-time/"
         >How to solve for the median of 2 sorted arrays.</a
       >
+      
+      <br />
+      <a href="https://github.com/Adrianjewell91/curriculumjava"
+        >SWE Curriculum Based on Real Tickets</a
+      >
+ 
+      <br />
+      <a href="https://github.com/Adrianjewell91/decoupler-website"
+        >Domain Decoupling, A Formal Definition</a
+      >
+
+      <br />
+      <a href="https://github.com/Adrianjewell91/how-to-code"
+        >How To Think Like A Programmer</a
+      >      
+
+      <br />
+      <a href="https://docs.google.com/document/d/12xEiJ91FWvugzsntBI0p5N8tB3IqSfxBTBu44LgVHv4/edit?tab=t.0#heading=h.7e7p76o4cz1o"
+        >Computational Approaches to Music Analysis</a
+      >      
+      
     </section>
   </body>
 </html>
