--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <section>
       <br />
-      <a href="https://adrianjewell.com/assets/resume/software-resume.html"
+      <a href="https://docs.google.com/document/d/18drPp9HeYssyfmw47pz0j2tp_4ry-2oA5HoO7qixtN4/edit?usp=sharing"
         >Resume</a
       >
       <br />
