--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
  
       <br />
       <a href="https://github.com/Adrianjewell91/decoupler-website"
-        >Domain Decoupling, A Formal Definition</a
+        >Domain Decoupling: A Formal Definition</a
       >
 
       <br />
