--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <section>
       Writings:
       <br />
+      <a href="https://docs.google.com/document/d/12xEiJ91FWvugzsntBI0p5N8tB3IqSfxBTBu44LgVHv4/edit?tab=t.0#heading=h.xkn9k8nxpy2f"
+        >Computational Approaches to Music Analysis</a
+      >      
+      
+      <br />
       <a
         href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/"
         >How music and coding are so similar.</a
@@ -52,11 +57,6 @@
       <br />
       <a href="https://github.com/Adrianjewell91/how-to-code"
         >How To Think Like A Programmer</a
-      >      
-
-      <br />
-      <a href="https://docs.google.com/document/d/12xEiJ91FWvugzsntBI0p5N8tB3IqSfxBTBu44LgVHv4/edit?tab=t.0#heading=h.7e7p76o4cz1o"
-        >Computational Approaches to Music Analysis</a
       >      
       
     </section>
