--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       
       <br />
       <a
-        href="https://blog.appacademy.io/state-management-observations-on-how-music-and-coding-are-so-similar/"
+        href="https://www.appacademy.io/blog/state-management-observations-on-how-music-and-coding-are-so-similar"
         >How music and coding are so similar.</a
       >
       <br />
