--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section>
       <br />
-      <a href="https://docs.google.com/document/d/18drPp9HeYssyfmw47pz0j2tp_4ry-2oA5HoO7qixtN4/edit?usp=sharing"
+      <a href="https://adrianjewell.com/assets/resume/resume.html"
         >Resume</a
       >
       <br />
