--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
       <br />
       <a href="https://github.com/Adrianjewell91/how-to-code"
         >How To Think Like A Programmer</a
-      >      
+      >     
+      
+      <br />
+      <a href="https://github.com/Adrianjewell91/theorizer"
+        >Theorizer (analyze musical scores)</a
+      >           
       
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
