--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -81,7 +81,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Performed many solo and collaborative recitals in the United States and China.</li>
+                                        <li>Performed solo and collaborative recitals in the United States and China.</li>
                                         <li>Instructed piano students in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
                                     </ul>
                                 </div>
@@ -202,11 +202,6 @@
                             <a class="socials__link setting--primary-text"
                                 href="https://youtube.com/@adrianjewell?si=GXwOs7ddSHnaKdqz">Watch
                                 on Youtube.</a>
-                        </div>
-                        <div class="socials">
-                            <div class="socials__label">Linkedin</div>
-                            <a class="socials__link setting--primary-text"
-                                href="https://www.linkedin.com/in/adrian-jewell/">Profile</a>
                         </div>
                         <div class="socials">
                             <div class="socials__label">Writing</div>
