--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -81,8 +81,10 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Performed solo and collaborative recitals in the United States and China.</li>
-                                        <li>Instructed piano students in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
+                                        <li>Performed 100+ solo and collaborative recitals across the United States and China.</li>                                
+                                        <li>Accompanied worship services, vocalists, theater productions, circus, among others.</li>
+                                        <li>1.5K+ listens on Tamil song transcriptions.</li>
+                                        <li>3K+ listens on classical and original compositions.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -98,14 +100,13 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Built and scaled enterprise backend systems at Wayfair (2019 - present).</li>
-                                            <li>Built frontend systems at Williams Sonoma (2018).</li>
+                                            <li>Scaled enterprise backend systems at Wayfair (2019 - present).</li>  
                                             <li>
+                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>                                            
+                                            <li>                                            
                                                 Built <a
                                                     href="https://github.com/adrianjewell91/theorizer">Theorizer</a>, an ML-based analyzer for musical scores,
-                                                which was accepted into the Oberlin College start-up accelerator program. </li>
-                                            <li>
-                                                Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>
+                                                which was accepted into the Oberlin College accelerator program. </li>
                                         </ul>
                                     </div>
                                 </div>
@@ -121,6 +122,7 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
+                                        <li>Taught piano students in Boston, New York City, Ohio, Michigan, San Francisco, and Changsha.</li>
                                         <li>Taught software development and data structures full-time at App Academy, San Francisco, CA (2019).</li>
                                         <li>Taught mathematics full-time at the Match Charter High School, Boston, MA (2016-2017).</li>
                                         <li>Taught spoken English full-time at the Changsha Nanya Middle School (湖南省长沙市南雅中学) (2014-2015).</li>
@@ -140,8 +142,8 @@
                             <div class="experience__description">
                                 <div>
                                     <ul>
-                                        <li>Published an article about music and programming, getting 38 thousand reads.</li>
-                                        <li>Wrote technical and philosophical works.</li>
+                                        <li>Published an article about music and programming, getting 40K reads.</li>
+                                        <li>Wrote various articles about music and programming.</li>
                                     </ul>
                                 </div>
                             </div>
