--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -84,7 +84,7 @@
                                         <li>Performed 100+ solo and collaborative recitals across the United States and China.</li>                                
                                         <li>Accompanied worship services, vocalists, theater productions, circus, among others.</li>
                                         <li>1.5K+ listens on Tamil song transcriptions.</li>
-                                        <li>3K+ listens on classical and original compositions.</li>
+                                        <li>70 Subscribers and 3K+ listens across youtube and soundcloud.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                         <div class="experience" style="page-break-inside: avoid;">
                             <div class="experience__header">
                                 <div class="experience__header-line">
-                                    <div class="experience__title">Writer</div>
+                                    <div class="experience__title">Writer / Composer</div>
                                     <div class="experience__date">2014 - Present</div>
                                 </div>
                             </div>
@@ -144,6 +144,7 @@
                                     <ul>
                                         <li>Published an article about music and programming, getting 40K reads.</li>
                                         <li>Wrote various articles about music and programming.</li>
+                                        <li>Composed original music, hundreds of listens on soundcloud.</li>
                                     </ul>
                                 </div>
                             </div>
