--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -84,7 +84,7 @@
                                         <li>Performed 100+ solo and collaborative recitals across the United States and China.</li>                                
                                         <li>Accompanied worship services, vocalists, theater productions, circus, among others.</li>
                                         <li>1.5K+ listens on Tamil song transcriptions.</li>
-                                        <li>70 Subscribers and 3K+ listens across youtube and soundcloud.</li>
+                                        <li>70 subscribers and 3K+ listens across youtube and soundcloud.</li>
                                     </ul>
                                 </div>
                             </div>
