--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     </header>
     <br />
     <section>
-      Hi I'm Adrian, and thanks for visiting my personal website!
+      Thanks for visiting my personal website!
     </section>
     <section>
+      <br />
+      <a href="https://docs.google.com/document/d/18drPp9HeYssyfmw47pz0j2tp_4ry-2oA5HoO7qixtN4/edit?usp=sharing"
+        >Resume (for Software Engineering)</a
+      >
       <br />
       <a href="https://adrianjewell.com/assets/resume/resume.html"
         >Resume</a
