--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <section>
       Writings:
       <br />
+      <a href="https://github.com/Adrianjewell91/decoupler-website"
+        >Decoupling: A Formal Definition and Applications</a
+      >
+      
+      <br />
       <a href="https://docs.google.com/document/d/12xEiJ91FWvugzsntBI0p5N8tB3IqSfxBTBu44LgVHv4/edit?tab=t.0#heading=h.xkn9k8nxpy2f"
         >Computational Approaches to Music Analysis</a
       >      
@@ -51,11 +56,6 @@
       <br />
       <a href="https://github.com/Adrianjewell91/curriculumjava"
         >SWE Curriculum Based on Real Tickets</a
-      >
- 
-      <br />
-      <a href="https://github.com/Adrianjewell91/decoupler-website"
-        >Domain Decoupling: A Formal Definition</a
       >
 
       <br />
