--- a/assets/resume/resume.html
+++ b/assets/resume/resume.html
@@ -100,7 +100,7 @@
                                 <div class="experience__description">
                                     <div>
                                         <ul>
-                                            <li>Scaled enterprise backend systems at Wayfair (2019 - present).</li>  
+                                            <li>Scaled enterprise backend systems at Wayfair (2019 - 2025).</li>  
                                             <li>
                                                 Built <a href="https://github.com/adrianjewell91/duet-">Duet</a>, a real-time online piano with collaboration abilities.</li>                                            
                                             <li>                                            
